# hector_perception

./: README.md
hector_five_pipes_detection/: CMakeLists.txt  package.xml
hector_five_pipes_detection/config/: HectorFivePipesConfig.cfg  params.yaml
hector_five_pipes_detection/include/hector_five_pipes_detection/: hector_five_pipes_detection.h
hector_five_pipes_detection/launch/: hector_five_pipes_detection.launch
hector_five_pipes_detection/src/: hector_five_pipes_detection.cpp  hector_five_pipes_detection_node.cpp
hector_rails_detection/: CMakeLists.txt  package.xml
hector_rails_detection/config/: HectorRailsConfig.cfg  params.yaml  params.yaml~
hector_rails_detection/include/hector_rails_detection/: rails_detection.h
hector_rails_detection/launch/: hector_rails_detection.launch
hector_rails_detection/src/: rails_detection.cpp  rails_detection_node.cpp
